Add pagination, filtering and sorting for test case, test folder and test plan